--- a/app/src/main/res/layout/activity_frontpage.xml
+++ b/app/src/main/res/layout/activity_frontpage.xml
@@ -81,7 +81,7 @@
         android:layout_marginTop="608dp"
         android:background="#E2FBFF"
         android:fontFamily="@font/griffy"
-        android:onClick="openBasket"
+        android:onClick="button3"
         android:text="REDIGER MENU"
         android:textColor="#000000"
         android:textStyle="bold"
